--- a/mytom/templates/tom_targets/target_detail.html
+++ b/mytom/templates/tom_targets/target_detail.html
@@ -1,5 +1,5 @@
 {% extends 'tom_common/base.html' %}
-{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras static cache force_photometry %}
+{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras force_photometry static cache %}
 {% block title %}Target {{ object.name }}{% endblock %}
 {% block additional_css %}
 <link rel="stylesheet" href="{% static 'tom_common/css/main.css' %}">
@@ -35,7 +35,7 @@ $(document).ready(function(){
       {% target_buttons object %}
       {% photometry_buttons object %}
       {% target_data object %}
-      {% recent_photometry object limit=3 %}
+      {% recent_photometry object %}
       {% share_data object %}
       {% if object.type == 'SIDEREAL' %}
       {% aladin object %}
