updated version of tom toolkit query functions (i.e. atlas, ztf, panstarrs). currently working on ingesting ztf text file data product by building custom data processor (work in progress).

--- a/mytom/atlas_app/templates/atlas_app/partials/photometry_buttons.html
+++ b/mytom/atlas_app/templates/atlas_app/partials/photometry_buttons.html
@@ -1,1 +1,11 @@
-<a href="{% url 'atlas_app:query' pk=target.id %}" title="Get photometry" class="btn  btn-primary">Get ATLAS Photometry</a>
+<head>
+<style>
+.element {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+</style>
+</head>
+<div class="element">
+    <a href="{% url 'atlas_app:query' pk=target.id %}" title="Get photometry" class="btn  btn-primary">Get ATLAS Photometry</a>
+</div>
