--- a/mytom/ztf_app/templates/ztf_app/partials/ztf_photometry_buttons.html
+++ b/mytom/ztf_app/templates/ztf_app/partials/ztf_photometry_buttons.html
@@ -1,1 +1,10 @@
-<a href="{% url 'ztf_app:ztfquery' pk=target.id %}" title="Get ZTF photometry" class="btn  btn-primary">Get ZTF Photometry</a>
+<head>
+<style>
+.element {
+  margin-bottom: 8px;
+}
+</style>
+</head>
+<div class="element">
+    <a href="{% url 'ztf_app:ztfquery' pk=target.id %}" title="Get ZTF photometry" class="btn  btn-primary">Get ZTF Photometry</a>
+</div>
