--- a/mytom/panSTARRS_app/templates/panstarrs_app/partials/panstarrs_photometry_buttons.html
+++ b/mytom/panSTARRS_app/templates/panstarrs_app/partials/panstarrs_photometry_buttons.html
@@ -1,1 +1,10 @@
-<a href="{% url 'panSTARRS_app:panstarrsquery' pk=target.id %}" title="Get panSTARRS photometry" class="btn  btn-primary">Get panSTARRS Photometry</a>
+<head>
+<style>
+.element {
+  margin-bottom: 8px;
+}
+</style>
+</head>
+<div class="element">
+    <a href="{% url 'panSTARRS_app:panstarrsquery' pk=target.id %}" title="Get panSTARRS photometry" class="btn  btn-primary">Get panSTARRS Photometry</a>
+</div>
