most recent version of mytom now with panstarrs/js9 window incorporated in the manage data tab

--- a/mytom/templates/tom_targets/target_detail.html
+++ b/mytom/templates/tom_targets/target_detail.html
@@ -92,6 +92,7 @@ $(document).ready(function(){
           {% upload_dataproduct object %}
         {% endif %}
         {% dataproduct_list_for_target object %}
+        {% panstarrs_js9 object %}
       </div>
       <div class="tab-pane" id="manage-groups">
         {% target_groups target %}
